force-app/main/default/objects/FacturaDeCliente__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facturas de Cliente</relationshipLabel>
    <relationshipName>FacturasDeCliente</relationshipName>
    <type>Lookup</type>
</CustomField>