force-app/main/default/objects/FacturaDeCliente__c/fields/FacturaDeClienteLegacy__c.field-meta.xml
<CustomField>
    <fullName>FacturaDeClienteLegacy__c</fullName>
    <label>Factura de cliente # (legacy)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>