force-app/main/default/objects/FacturaDeCliente__c/fields/FechaCancelada__c.field-meta.xml
<CustomField>
    <fullName>FechaCancelada__c</fullName>
    <label>Fecha cancelada</label>
    <type>Date</type>
</CustomField>