force-app/main/default/objects/FacturaDeCliente__c/fields/FechaCobrada__c.field-meta.xml
<CustomField>
    <fullName>FechaCobrada__c</fullName>
    <label>Fecha cobrada</label>
    <type>Date</type>
</CustomField>