force-app/main/default/objects/FacturaDeCliente__c/fields/FechaContabilizada__c.field-meta.xml
<CustomField>
    <fullName>FechaContabilizada__c</fullName>
    <label>Fecha contabilizada</label>
    <type>Date</type>
</CustomField>