force-app/main/default/objects/FacturaDeCliente__c/fields/FechaDeFactura__c.field-meta.xml
<CustomField>
    <fullName>FechaDeFactura__c</fullName>
    <label>Fecha de factura</label>
    <type>Date</type>
</CustomField>