force-app/main/default/objects/FacturaDeCliente__c/fields/FechaEnviada__c.field-meta.xml
<CustomField>
    <fullName>FechaEnviada__c</fullName>
    <label>Fecha enviada cliente</label>
    <type>Date</type>
</CustomField>