force-app/main/default/objects/FacturaDeCliente__c/fields/ItemsDeFactura__c.field-meta.xml
<CustomField>
    <fullName>ItemsDeFactura__c</fullName>
    <label># Items de factura</label>
    <summaryForeignKey>ItemDeFacturaDeCliente__c.Factura__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>