force-app/main/default/objects/FacturaDeCliente__c/fields/PedidoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>PedidoPrincipal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Principal</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Facturas de Cliente (Pedido Principal)</relationshipLabel>
    <relationshipName>FacturasDeCliente</relationshipName>
    <type>Lookup</type>
</CustomField>