force-app/main/default/objects/FacturaDeCliente__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>ItemDeFacturaDeCliente__c.Total__c</summarizedField>
    <summaryForeignKey>ItemDeFacturaDeCliente__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>