force-app/main/default/objects/FacturaDeCliente__c/fields/TotalCantidad__c.field-meta.xml
<CustomField>
    <fullName>TotalCantidad__c</fullName>
    <label>Total cantidad</label>
    <summarizedField>ItemDeFacturaDeCliente__c.Cantidad__c</summarizedField>
    <summaryForeignKey>ItemDeFacturaDeCliente__c.Factura__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>