force-app/main/default/objects/FacturaDeCliente__c/fields/TotalEnLetras__c.field-meta.xml
<CustomField>
    <fullName>TotalEnLetras__c</fullName>
    <label>Total en letras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>